@@ -31,6 +31,7 @@ import org.elasticsearch.common.xcontent.NamedXContentRegistry;
 import org.elasticsearch.common.xcontent.ToXContent;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentFactory;
+import org.elasticsearch.common.xcontent.XContentParseException;
 import org.elasticsearch.common.xcontent.XContentParser;
 import org.elasticsearch.common.xcontent.XContentType;
 import org.elasticsearch.common.xcontent.json.JsonXContent;
@@ -69,6 +70,7 @@ import java.util.function.Function;
 
 import static java.util.Collections.emptyList;
 import static org.elasticsearch.test.EqualsHashCodeTestUtils.checkEqualsAndHashCode;
+import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
 
 public class HighlightBuilderTests extends ESTestCase {
@@ -156,23 +158,23 @@ public class HighlightBuilderTests extends ESTestCase {
      */
     public void testUnknownArrayNameExpection() throws IOException {
         {
-            IllegalArgumentException e = expectParseThrows(IllegalArgumentException.class, "{\n" +
+            XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
                     "    \"bad_fieldname\" : [ \"field1\" 1 \"field2\" ]\n" +
                     "}\n");
-            assertEquals("[highlight] unknown field [bad_fieldname], parser not found", e.getMessage());
+            assertEquals("[2:5] [highlight] unknown field [bad_fieldname], parser not found", e.getMessage());
         }
 
         {
-            ParsingException e = expectParseThrows(ParsingException.class, "{\n" +
+            XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
                     "  \"fields\" : {\n" +
                     "     \"body\" : {\n" +
                     "        \"bad_fieldname\" : [ \"field1\" , \"field2\" ]\n" +
                     "     }\n" +
                     "   }\n" +
                     "}\n");
-            assertEquals("[highlight] failed to parse field [fields]", e.getMessage());
-            assertEquals("[fields] failed to parse field [body]", e.getCause().getMessage());
-            assertEquals("[highlight_field] unknown field [bad_fieldname], parser not found", e.getCause().getCause().getMessage());
+            assertThat(e.getMessage(), containsString("[highlight] failed to parse field [fields]"));
+            assertThat(e.getCause().getMessage(), containsString("[fields] failed to parse field [body]"));
+            assertEquals("[4:9] [highlight_field] unknown field [bad_fieldname], parser not found", e.getCause().getCause().getMessage());
         }
     }
 
@@ -186,23 +188,23 @@ public class HighlightBuilderTests extends ESTestCase {
      */
     public void testUnknownFieldnameExpection() throws IOException {
         {
-            IllegalArgumentException e = expectParseThrows(IllegalArgumentException.class, "{\n" +
+            XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
                     "    \"bad_fieldname\" : \"value\"\n" +
                     "}\n");
-            assertEquals("[highlight] unknown field [bad_fieldname], parser not found", e.getMessage());
+            assertEquals("[2:5] [highlight] unknown field [bad_fieldname], parser not found", e.getMessage());
         }
 
         {
-            ParsingException e = expectParseThrows(ParsingException.class, "{\n" +
+            XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
                     "  \"fields\" : {\n" +
                     "     \"body\" : {\n" +
                     "        \"bad_fieldname\" : \"value\"\n" +
                     "     }\n" +
                     "   }\n" +
                     "}\n");
-            assertEquals("[highlight] failed to parse field [fields]", e.getMessage());
-            assertEquals("[fields] failed to parse field [body]", e.getCause().getMessage());
-            assertEquals("[highlight_field] unknown field [bad_fieldname], parser not found", e.getCause().getCause().getMessage());
+            assertThat(e.getMessage(), containsString("[highlight] failed to parse field [fields]"));
+            assertThat(e.getCause().getMessage(), containsString("[fields] failed to parse field [body]"));
+            assertEquals("[4:9] [highlight_field] unknown field [bad_fieldname], parser not found", e.getCause().getCause().getMessage());
         }
     }
 
@@ -211,56 +213,57 @@ public class HighlightBuilderTests extends ESTestCase {
      */
     public void testUnknownObjectFieldnameExpection() throws IOException {
         {
-            IllegalArgumentException e = expectParseThrows(IllegalArgumentException.class, "{\n" +
+            XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
                     "    \"bad_fieldname\" :  { \"field\" : \"value\" }\n \n" +
                     "}\n");
-            assertEquals("[highlight] unknown field [bad_fieldname], parser not found", e.getMessage());
+            assertEquals("[2:5] [highlight] unknown field [bad_fieldname], parser not found", e.getMessage());
         }
 
         {
-            ParsingException e = expectParseThrows(ParsingException.class, "{\n" +
+            XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
                     "  \"fields\" : {\n" +
                     "     \"body\" : {\n" +
                     "        \"bad_fieldname\" : { \"field\" : \"value\" }\n" +
                     "     }\n" +
                     "   }\n" +
                     "}\n");
-            assertEquals("[highlight] failed to parse field [fields]", e.getMessage());
-            assertEquals("[fields] failed to parse field [body]", e.getCause().getMessage());
-            assertEquals("[highlight_field] unknown field [bad_fieldname], parser not found", e.getCause().getCause().getMessage());
+            assertThat(e.getMessage(), containsString("[highlight] failed to parse field [fields]"));
+            assertThat(e.getCause().getMessage(), containsString("[fields] failed to parse field [body]"));
+            assertEquals("[4:9] [highlight_field] unknown field [bad_fieldname], parser not found", e.getCause().getCause().getMessage());
         }
     }
 
     public void testStringInFieldsArray() throws IOException {
-        ParsingException e = expectParseThrows(ParsingException.class, "{\"fields\" : [ \"junk\" ]}");
-        assertEquals("[highlight] failed to parse field [fields]", e.getMessage());
-        assertEquals(
-                "[fields] can be a single object with any number of fields or an array where each entry is an object with a single field",
-                e.getCause().getMessage());
+        XContentParseException e = expectParseThrows(XContentParseException.class, "{\"fields\" : [ \"junk\" ]}");
+        assertThat(e.getMessage(), containsString("[highlight] failed to parse field [fields]"));
+        assertThat(e.getCause().getMessage(),
+                containsString("[fields] can be a single object with any number of fields " +
+                    "or an array where each entry is an object with a single field"));
     }
 
     public void testNoFieldsInObjectInFieldsArray() throws IOException {
-        ParsingException e = expectParseThrows(ParsingException.class, "{\n" +
+        XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
                 "  \"fields\" : [ {\n" +
                 "   }] \n" +
                 "}\n");
-        assertEquals("[highlight] failed to parse field [fields]", e.getMessage());
-        assertEquals(
-                "[fields] can be a single object with any number of fields or an array where each entry is an object with a single field",
-                e.getCause().getMessage());
+        assertThat(e.getMessage(), containsString("[highlight] failed to parse field [fields]"));
+        assertThat(e.getCause().getMessage(),
+                containsString("[fields] can be a single object with any number of fields " +
+                        "or an array where each entry is an object with a single field"));
     }
 
     public void testTwoFieldsInObjectInFieldsArray() throws IOException {
-        ParsingException e = expectParseThrows(ParsingException.class, "{\n" +
+        XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
                 "  \"fields\" : [ {\n" +
                 "     \"body\" : {},\n" +
                 "     \"nope\" : {}\n" +
                 "   }] \n" +
                 "}\n");
-        assertEquals("[highlight] failed to parse field [fields]", e.getMessage());
-        assertEquals(
-                "[fields] can be a single object with any number of fields or an array where each entry is an object with a single field",
-                e.getCause().getMessage());    }
+        assertThat(e.getMessage(), containsString("[highlight] failed to parse field [fields]"));
+        assertThat(e.getCause().getMessage(),
+                containsString("[fields] can be a single object with any number of fields " +
+                        "or an array where each entry is an object with a single field"));
+    }
 
      /**
      * test that build() outputs a {@link SearchContextHighlight} that is has similar parameters
@@ -405,10 +408,10 @@ public class HighlightBuilderTests extends ESTestCase {
         assertArrayEquals("setting tags_schema 'default' should alter post_tags", HighlightBuilder.DEFAULT_POST_TAGS,
                 highlightBuilder.postTags());
 
-        ParsingException e = expectParseThrows(ParsingException.class, "{\n" +
+        XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
                 "    \"tags_schema\" : \"somthing_else\"\n" +
                 "}\n");
-        assertEquals("[highlight] failed to parse field [tags_schema]", e.getMessage());
+        assertThat(e.getMessage(), containsString("[highlight] failed to parse field [tags_schema]"));
         assertEquals("Unknown tag schema [somthing_else]", e.getCause().getMessage());
     }
 
@@ -436,20 +439,20 @@ public class HighlightBuilderTests extends ESTestCase {
     }
 
     public void testPreTagsWithoutPostTags() throws IOException {
-        ParsingException e = expectParseThrows(ParsingException.class, "{\n" +
+        ParsingException err = expectParseThrows(ParsingException.class, "{\n" +
                 "    \"pre_tags\" : [\"<a>\"]\n" +
                 "}\n");
-        assertEquals("pre_tags are set but post_tags are not set", e.getMessage());
+        assertEquals("pre_tags are set but post_tags are not set", err.getMessage());
 
-        e = expectParseThrows(ParsingException.class, "{\n" +
+        XContentParseException e = expectParseThrows(XContentParseException.class, "{\n" +
                 "  \"fields\" : {\n" +
                 "     \"body\" : {\n" +
                 "        \"pre_tags\" : [\"<a>\"]\n" +
                 "     }\n" +
                 "   }\n" +
                 "}\n");
-        assertEquals("[highlight] failed to parse field [fields]", e.getMessage());
-        assertEquals("[fields] failed to parse field [body]", e.getCause().getMessage());
+        assertThat(e.getMessage(), containsString("[highlight] failed to parse field [fields]"));
+        assertThat(e.getCause().getMessage(), containsString("[fields] failed to parse field [body]"));
         assertEquals("pre_tags are set but post_tags are not set", e.getCause().getCause().getMessage());
     }
 
@@ -594,10 +597,10 @@ public class HighlightBuilderTests extends ESTestCase {
                     value = randomAlphaOfLengthBetween(1, 10);
                     break;
                 case 1:
-                    value = new Integer(randomInt(1000));
+                    value = Integer.valueOf(randomInt(1000));
                     break;
                 case 2:
-                    value = new Boolean(randomBoolean());
+                    value = Boolean.valueOf(randomBoolean());
                     break;
                 }
                 options.put(randomAlphaOfLengthBetween(1, 10), value);
@@ -703,9 +706,11 @@ public class HighlightBuilderTests extends ESTestCase {
             switch (randomIntBetween(0, 2)) {
                 // change settings that only exists on top level
                 case 0:
-                    mutation.useExplicitFieldOrder(!original.useExplicitFieldOrder()); break;
+                    mutation.useExplicitFieldOrder(!original.useExplicitFieldOrder());
+                    break;
                 case 1:
-                    mutation.encoder(original.encoder() + randomAlphaOfLength(2)); break;
+                    mutation.encoder(original.encoder() + randomAlphaOfLength(2));
+                    break;
                 case 2:
                     if (randomBoolean()) {
                         // add another field
